# taggle

./: .gitignore  README.md  pyproject.toml
app/src/: in_memory_db.py  main.py  routes.py  schemas.py  types.py
app/src/utils/: helpers.py  validators.py
app/tests/: conftest.py  test_schemas.py  test_validators.py
src/: app.py  dependencies.py  routes.py
src/domain/: __init__.py  data_response.py  item.py  schemas.py  submit_request.py
src/errors/: base.py
src/services/: search_service.py  submission_service.py
src/storage/: __init__.py  in_memory_db.py
src/utils/: helpers.py
tests/: conftest.py  test_models.py  test_routes.py  test_schemas.py  test_search_service.py  test_submission_service.py  test_utils.py  test_validators.py
