[tool.poetry]
name = "taggle"
version = "0.1.0"
description = "Minimal REST API with tagging and search built using Litestar"
authors = ["nikunj-satyanet <nikunj_sura@hotmail.com>"]
license = "Apache License"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"
pydantic = "^2.11.7"
uvicorn = "^0.34.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
litestar = "^2.16.0"

[tool.poetry.scripts]
start = "app.src.main:run"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
