[tool.poetry]
name = "taggle"
version = "0.1.0"
description = "Minimal REST API with tagging and search built using Litestar"
authors = ["nikunj-satyanet <nikunj_sura@hotmail.com>"]
license = "Apache License"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
poetry-core = "^2.1.3"
pydantic = "^2.11.7"
uvicorn = "^0.34.3"
coverage = "^7.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
litestar = "^2.16.0"

[tool.poetry.scripts]
start = "src.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
